# iris_project

./: .pre-commit-config.yaml  README.md  infer.py  pyproject.toml  setup.cfg  train.py
.dvc/: config
configs/: config.yaml
data/: .gitignore  Iris.csv.dvc  X_test.csv  y_pred.csv  y_test.csv
iris_project/: my_types.py
models/: .gitignore  Iris_model.sav
