[tool.poetry]
name = "iris_project"
version = "0.1.0"
description = ""
authors = ["Groblin <lebedivanm@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.4"
torch = "^2.0.1"
pandas = "^1.4.2"
scikit-learn = "^1.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
